--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,11 @@ h1 {
 h2 {
     color: blueviolet;
 }
-img {
+img, video {
     max-width: 100%;
     height: auto;
+}
+iframe {
+    width: 80%;
+    height: 400px;
 }
