--- a/video-css-2/css/box-model.css
+++ b/video-css-2/css/box-model.css
@@ -1,3 +1,7 @@
+body {
+    border: 0;
+}
+
 h1 {
     width: 400px;
     height: 200px;
@@ -8,5 +12,36 @@ h1 {
     border-style: dotted;
     /* border: 2px dashed blue  -> puedo sintetizar asi */
 }
+
+.caja-uno,
+.caja-dos {
+    background-color: darkseagreen;
+    border: medium solid orchid;
+    /* 
+    Aplica para margin y padding
+    1 valor = aplica a los 4 lados
+    2 valores = 
+    primer valor es para los lados verticales
+    segundo valor es para los lados horizontales
+    3 valores = 
+    primer valor es para top
+    segundo valor es para los lados horizontales
+    tercer valor es para bottom
+    4 valores =
+    pensar en las manecillas del reloj
+    primer valor es para top 12
+    segundo valor es para right 3
+    tercer valor es para bottom 6
+    cuarto valor es para left 9
+    */
+    padding: 10px;
+    margin: 20px;
+    padding: 20px 40px;
+    margin: 40px 20px;
+    padding: 0 40px 20px;
+    margin: 100px 50px 30px 0;
+}
+
+
 
 /* https://cssreference.io/ */
