--- a/video-css-2/css/box-model.css
+++ b/video-css-2/css/box-model.css
@@ -42,6 +42,37 @@ h1 {
     margin: 100px 50px 30px 0;
 }
 
+/* Caja de línea
+ - Ocupan el espacio necesario para mostrar su contenido.
+ - No permiten dimensiones modificables (alto, ancho).
+ - Permiten otros elementos a su lado.
+ - Padding y margin solo empujan a elementos adyacentes en horizontal,
+   nunca en vertical.
 
+   Caja de bloque
+ - Ocupan todo el ancho disponible.
+ - Tienen dimensiones modificables (alto, ancho).
+ - No permiten otros elementos a su lado (aunque especifique un ancho,
+   siguen ocupando todo el espacio disponible a lo ancho).
+ 
+*/
+
+.caja-linea,
+.caja-bloque {
+    background-color: darkcyan;
+    width: 500px;
+    height: 250px;
+    color: beige;
+    border: thin solid black;
+    padding: 16px;
+}
+
+.caja-bloque {
+    margin: 32px;
+}
+
+.caja-linea {
+    margin: 32px;
+}
 
 /* https://cssreference.io/ */
