margin vertical collapse

--- a/video-css-2/css/box-model.css
+++ b/video-css-2/css/box-model.css
@@ -173,6 +173,15 @@ html {
     es una muy mala práctica, incluido dejar una etiqueta vacia */
 }
 
+/* Colapso de márgenes verticales */
+.margin-collapse {
+    background-color:darkmagenta;
+}
 
+.margin-collapse section {
+    border: thin solid black;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
 
 /* https://cssreference.io/ */
