--- a/video-css-2/css/box-model.css
+++ b/video-css-2/css/box-model.css
@@ -184,4 +184,11 @@ html {
     margin-bottom: 16px;
 }
 
+.margin-collapse span {
+    border: thin solid black;
+    display: inline-block;
+    margin-right: 16px;
+    margin-left: 16px;
+}
+
 /* https://cssreference.io/ */
