--- a/video-css-2/css/positions.css
+++ b/video-css-2/css/positions.css
@@ -46,3 +46,38 @@ Estas 5 propiedades no funcionan con el valor de static
     width: 400px;
     top: 30px; /* se sobreescribe por cascada */
 }
+
+/* Absolute: 
+El elemento pierde sus dimensiones y posición original en
+el flujo del documento. Si se mueve puede tomar como 
+referencia 2 elementos:
+1- El primer ancestro con posicionamiento relativo
+2- Si no encuentra un ancestro relativo, 
+se mueve respecto del documento HTML
+
+*/
+
+.absolute {
+    background-color: tomato;
+    position: absolute;
+    width: 200px;
+    height: 40px;
+    /* top: 0;
+    left: 0; */
+    right: 0;
+}
+
+.relative-parent {
+    background-color: darkgray;
+    width: 600px;
+    height: 40px;
+    top: 0;
+}
+
+.absolute-child {
+    background-color: khaki;
+    position: absolute;
+    left: 0;
+   /*  top: 0; */
+}
+
