--- a/video-css-2/css/positions.css
+++ b/video-css-2/css/positions.css
@@ -98,3 +98,33 @@ el elemento no lo hará, quedará fijo.
     top: 30px;
     left: 400px;
 }
+
+/* Posicionamiento sticky:
+Es una combinación de posicionamiento relative y fixed, 
+para este posicionamiento las propiedades de top, bottom, right y left
+no mueven el elemento, sirven como un punto de referencia,
+mientras no lleguen a ese valor el elemento se comporta como
+relative, cuando llega se convierte en fixed.
+Para que este comportamiento funcione el elemento sticky 
+debe ser hijo directo del body o su elemento contenedor 
+debe tener dimenciones definidas y sólo será sticky dentro
+de las dimensiones de su contenedor padre.
+(entonces es dinámico pero también puede quedar fijo)
+*/
+
+.sticky {
+    background-color: lightslategray;
+    position: sticky;
+    top: 50px;
+}
+
+.sticky-parent {
+    border: thin dashed black;
+    height: 400px;
+}
+
+.sticky-child {
+    background-color: lightblue;
+    position: sticky;
+    top: 75px;
+}
