--- a/video-css-2/css/positions.css
+++ b/video-css-2/css/positions.css
@@ -128,3 +128,51 @@ de las dimensiones de su contenedor padre.
     position: sticky;
     top: 75px;
 }
+
+/* 
+Z-Index: propiedad que permite controlar la profundidad
+de los elementos posicionados, su valor por defecto es auto,
+acepta números positivos, negativos y cero.
+A mayor valor el elemento esta más al frente, 
+a menor valor más al fondo.
+Un elemento padre nunca podrá estar sobre sus elementos hijos, 
+sin embargo los elementos hijos si pueden dándoles un valor negativo
+y que el elemento padre no tenga definido valor de z-index
+*/
+
+.z-index-1,
+.z-index-2 {
+    background-color: grey;
+    border: thin solid black;
+    position: relative;
+    width: 200px;
+    height: 200px;
+}
+
+.z-index-1 {
+    z-index: 1;
+}
+
+.z-index-2 {
+    top: 200px;
+    left: 100px;
+    z-index: 2;
+}
+
+.z-index-parent {
+    background-color: mediumorchid;
+    width: 300px;
+    height: 300px;
+    position: relative;
+   /*  z-index: 2;  comentando esta linea en el padre, ahi si el hijo se pondra detras del elemento padre*/
+}
+
+.z-index-child {
+    background-color: mediumpurple;
+    position: relative;
+    width: 150px;
+    height: 150px;
+    top: -75px;
+    left: 150px;
+    z-index: 3; /* si es negativo, el hijo quedara atras */
+}
