--- a/video-css-2/css/positions-examples.css
+++ b/video-css-2/css/positions-examples.css
@@ -24,3 +24,24 @@ body {
     width: 100%;
     height: 100vh;
 } /* cuando hagamos scroll la cabecera queda fija */
+
+/* sticky en slides */
+.slide {
+    background-color: cornflowerblue;
+    width: 100%;
+    height: 100vh;
+}
+
+.slide:nth-child(odd) {
+    background-color: blueviolet;
+}
+
+.slide-title {
+    background-color: burlywood;
+    padding: 16px;
+    text-align: center;
+    position: sticky;
+    top: 50px;/* 0 */
+    margin-top: 0; /* el h3 de por si ya tiene un margin */
+    margin-bottom: 0;
+}
