--- a/video-css-3/css/units.css
+++ b/video-css-3/css/units.css
@@ -31,9 +31,9 @@ html {
 *::before {
   box-sizing: inherit;
 }
-body {
-  /* margin: 0; */
-}
+/* body {
+  margin: 0; 
+}*/
 /* -- */
 
 .pixels {
