--- a/video-css-3/css/fonts-texts.css
+++ b/video-css-3/css/fonts-texts.css
@@ -60,3 +60,8 @@ opcional - ocultará el texto, luego lo cargará con la fuente alternativa
     font-family: "Pecita", cursive;
     font-size: 2rem;
 }
+
+.ralewey {
+    font-family: 'Raleway', sans-serif;
+    font-size: 2rem;
+}
