--- a/video-css-3/css/backgrounds.css
+++ b/video-css-3/css/backgrounds.css
@@ -79,3 +79,38 @@ background-attachment: define cómo se comportará la imagen de fondo al desplaz
     background-origin: content-box;
     padding: 1rem;
 }
+
+.bg-attachment {
+    background-color: cadetblue;
+    background-image: url("../assets/logo-miCosturerito.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 60vh;
+    /*background-attachment: scroll;  valor por defecto, el contenido va con el scroll */
+    background-attachment: fixed; /* se fija la imagen */
+    /*background: blue;  me tapa todo lo anterior */
+}
+/* background es el atajo a todos los background 
+por eso siempre es mejor especificar a que nos estamos refiriendo */
+
+.bg-multiple {
+    width: 80%;
+    height: 80vh;
+    background-image: 
+        url("../assets/logo-miCosturerito.png"), 
+        url("../assets/myLove.png"); /* la ultima imagen que pongamos aqui, será la que esté al fondo*/
+    background-repeat: repeat-y, no-repeat;
+    background-size: 10%, cover; /* si defino un solo valor aplica a las 2 imagenes */
+    /* background-size: contain; */
+}
+
+.bg-art {
+    border: thin solid black;
+    width: 1000px;
+    height: 700px;
+    background: /* fundidas 3 imagenes que algunas partes son transparentes */
+        url("../assets/arbol.png")no-repeat center bottom fixed, 
+        url("../assets/aves.png")no-repeat center bottom, /* la ultima imagen que pongamos aqui, será la que esté al fondo*/
+        url("../assets/cielo.png")no-repeat center top 
+}
